# cos-rs

./: README.md
bootloader/: Cargo.toml  build.rs  i386-unknown-none.json  linker.ld
bootloader/.cargo/: config.toml
bootloader/asm/: boot.s  stub.s
bootloader/src/: bit64.rs  loader.rs  main.rs  memory.rs  vga.rs
build-scripts/: Cargo.toml
build-scripts/src/: adapter.rs  main.rs
kernel/: Cargo.toml  linker.ld  x86_64-unknown-cos.json
kernel/.cargo/: config.toml
kernel/src/: bootloader.rs  main.rs  panicking.rs  sync.rs
kernel/src/display/: vga_text.rs
kernel/src/int/: hard.rs  idt.rs  mod.rs  soft.rs  syscall.rs  tss.rs
kernel/src/int/syscall/: handler.rs
kernel/src/int/syscall/handler/: syscall_file.rs  syscall_memory.rs  syscall_multitask.rs
kernel/src/io/: keyboard.rs  mod.rs
kernel/src/io/disk/: ata_lba.rs  mod.rs
kernel/src/memory/: heap.rs  mod.rs  page.rs  physics.rs
kernel/src/multitask/: async_rt.rs  async_task.rs  elf_loader.rs  mod.rs  process.rs  thread.rs
kernel/src/sync/: int.rs  mod.rs  percpu.rs  spin.rs
kernel/src/syscall/: debug.rs  file.rs  memory.rs  mod.rs  multitask.rs
kernel/src/trap/: hard.rs  idt.rs  mod.rs  soft.rs  syscall.rs  tss.rs
kernel/src/trap/syscall/: handler.rs
kernel/src/trap/syscall/handler/: syscall_file.rs  syscall_memory.rs  syscall_multitask.rs
kernel/src/user/: handle.rs
user/: linker.ld  x86_64-unknown-cos.json
user/system/: Cargo.toml
user/system/.cargo/: config.toml
user/system/init/: Cargo.toml
user/system/init/src/: main.rs
user/system/shell/: Cargo.toml
(+1 files in other folders)
