[package]
edition = "2024"
name = "kernel"
version = "0.1.0"

[profile.dev]
lto = true
opt-level = 3
panic = "abort"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"

[dependencies]
cos-sys = {path = "../user/library/cos-sys"}
elf = {path = "../library/elf"}
filesystem = {path = "../library/filesystem"}
async_locks = {path = "../library/async_locks"}
rlibc = "1.0.0"
